--- a/theme-template/index.html
+++ b/theme-template/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Blog Site Template" />
-    <meta name="author" content="https://www.linkedin.com/in/connorocampo/" />
+    <meta name="description" content="WP Binge" />
+    <meta name="author" content="https://www.connorocampo.dev" />
     <link rel="shortcut icon" href="./images/favicon.png" />
 
     <!-- FontAwesome CSS-->
